<resources>
    <string name="app_name">Som Dos Veículos</string>
    <string name="desc_image_collapse">Som dos Veículos</string>
    <string name="action_about">Sobre</string>
    <string name="action_share">Compartilhar</string>
    <string name="aviao">Avião</string>
    <string name="carro">Carro</string>
    <string name="bicicleta">Bicicleta</string>
    <string name="caminhao">Caminhão</string>
    <string name="helicop">Helicóptero</string>
    <string name="moto">Motocicleta</string>
    <string name="ambulancia">Ambulância</string>
    <string name="aviao_mono">Avião Monomotor</string>
    <string name="bombeiro">Caminhão dos Bombeiros</string>
    <string name="foguete">Foguete</string>
    <string name="lixo">Caminhão do Lixo</string>
    <string name="policia">Carro da Polícia</string>
    <string name="sub">Submarino</string>
    <string name="trator">Trator</string>
    <string name="trem">Trem</string>
    <string name="design">Design from freepik.com</string>
    <string name="text_share_link">Que legal e divertido o som dos veículos. Tem carro, avião, trem e muito mais. Vem se divertir também. Baixe o App em: https://play.google.com/store/apps/details?id=com.luizmagno.somdosveiculos\n</string>
    <string name="link_to_policy">https://luizmgms.wixsite.com/home/som-dos-veiculos</string>
    <string name="avalie_app">Avaliar</string>
    <string name="created_at">Criado por Luiz Magno M. de Sousa.\nArt Design por freepik.com\nVersão 1.0.0</string>
    <string name="link_to_avalie">https://play.google.com/store/apps/details?id=com.luizmagno.somdosveiculos</string>
    <string name="policy">Política de Privacidade</string>
    <string name="tab_text_1">Terrestres</string>
    <string name="tab_text_2">Aéreos</string>
    <string name="tab_text_3">Aquáticos</string>
    <string name="navio">Navio</string>
    <string name="id_of_app">ca-app-pub-9790401897088480~4401350299</string>
</resources>