<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/back_in_about">

    <TextView
        android:id="@+id/titleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:layout_margin="16dp"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/logoId"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleId"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/createdId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_at"
        android:textColor="@android:color/black"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:gravity="center"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@+id/logoId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="O" />
    <Button
        android:id="@+id/buttonShareInAboutId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_share"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/createdId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAvalieInAboutId"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/buttonAvalieInAboutId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/avalie_app"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/createdId"
        app:layout_constraintStart_toEndOf="@+id/buttonShareInAboutId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>